* fixed bug where sometimes dice would not show up on the select casualties panel

* removed "Heavy Bombers Pick best of X Dice" option from classic and wandering head big world, it didnt work

* Fixed bug where transport moves could be undone before moves where the transport had been loaded/unloaded

Changes for 0.5.4

* fixed bug where units could blitz through territories with an aa gun if they blitzed in 2 steps (4th edition only) (sgb)

* fixed bug [ 1188411 ] Missing client text (Chat window) 5.2.2 (sgb)

* fixed bug [ 1205387 ] Saving game during combat 0.5.3 (sgb)

* fixed bug [ 1205775 ] 0.5.3 eMail Bug - hyphens not allowed in emails (sgb)

* fixed bug [ 1205504 ] Units can land in amphibious assaults when transport is sunk (sgb)

* fixed bug [ 1198828 ]Heavy Bomber Tech Broken 0.5.3 (sgb)

Changes for 0.5.3

* added europe and pacific maps (incomplete versions) by iron cross (George_H)

* added extra dice statistics such as, median, variance, and standard deviation (George_H)

* fix bug [ 1023326 ] Fig Landing Problem, J1 (sgb)

* more flexible validation for planes landing on carriers (sgb)

* add stat export menu item Game->Export Game Stats (sgb)

* upgraded plastic look and feel to version 1.3.1 (sgb)

* add vc drawing and added vc cities to stats (sgb)

* better email address ui and validation, allow up to 5 emails in to and copy (sgb)

* added white factory images (zero_pilot)

* added drawing capitol markers (capitol markers contributed by black elk) (sgb)

* added junit.jar file to lib and removed it from .ant.properties (sgb)

* fixed bug  [ 1070176 ] Mistakes in calculating Battlescore (change in TUV) (sgb)

* fixed bug [ 1116632 ] v0.5.1.1 TripleA skipping battle in Borneo (sgb)

* fixed bug [ 1145318 ] Another Error on 5.2.2 (sgb)

* fixed bug [ 1157717 ] 0.5.2.2 Error with question : Sumerge subs (sgb)

* fixed bug [ 1175467 ] game "stuck" when doing multiple battles with same units (sgb)
